--- a/example/package.json
+++ b/example/package.json
@@ -9,24 +9,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.0",
-    "@angular/compiler": "^2.4.0",
-    "@angular/core": "^2.4.0",
-    "@angular/forms": "^2.4.0",
-    "@angular/http": "^2.4.0",
-    "@angular/platform-browser": "^2.4.0",
-    "@angular/platform-browser-dynamic": "^2.4.0",
-    "@angular/router": "^3.4.0",
+    "@angular/common": "^4.1.0",
+    "@angular/compiler": "^4.1.0",
+    "@angular/core": "^4.1.0",
+    "@angular/forms": "^4.1.0",
+    "@angular/http": "^4.1.0",
+    "@angular/platform-browser": "^4.1.0",
+    "@angular/platform-browser-dynamic": "^4.1.0",
+    "@angular/router": "^4.1.0",
     "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6",
+    "rxjs": "^5.3.0",
+    "zone.js": "^0.8.9",
     "ng2-ion-range-slider": "^1.0.1"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.2",
-    "@angular/compiler-cli": "^2.4.0",
-    "@types/node": "~6.0.60",
-    "ts-node": "~2.0.0",
-    "typescript": "~2.0.0"
+    "@angular/cli": "1.0.1",
+    "@angular/compiler-cli": "^4.1.0",
+    "@types/node": "~7.0.14",
+    "ts-node": "~3.0.2",
+    "typescript": "~2.1.5"
   }
 }
