--- a/package.json
+++ b/package.json
@@ -30,16 +30,10 @@
     "@angular/compiler": "~2.4.4",
     "@angular/compiler-cli": "^2.4.9",
     "@angular/core": "~2.4.4",
-    "@angular/forms": "~2.4.4",
-    "@angular/http": "~2.4.4",
-    "@angular/platform-browser": "~2.4.4",
-    "@angular/platform-browser-dynamic": "~2.4.4",
-    "@angular/router": "~3.0.2",
-    "rxjs": "5.0.0-beta.12",
     "typescript": "^2.0.9"
   },
   "dependencies": {
-    "@angular/core": "^2.4.4",
+    "@angular/core": ">=2.4.4",
     "@types/jquery": "^2.0.40",
     "ion-rangeslider": "^2.1.6"
   }
