--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
   },
   "homepage": "https://github.com/PhilippStein/ng2-ion-range-slider#readme",
   "devDependencies": {
-    "@angular/common": "2.4.4",
-    "@angular/compiler": "2.4.4",
-    "@angular/compiler-cli": "2.4.4",
-    "@angular/core": "2.4.4",
+    "@angular/common": "^2.4.4",
+    "@angular/compiler": "^2.4.4",
+    "@angular/compiler-cli": "^2.4.4",
+    "@angular/core": "^2.4.4",
     "@types/core-js": "^0.9.41",
     "typescript": "2.0.9"
   },
   "dependencies": {
-    "@angular/core": "2.4.4",
+    "@angular/core": "^2.4.4",
     "@types/jquery": "^2.0.40",
+    "@types/node": "~6.0.60",
     "ion-rangeslider": "2.1.6",
     "rxjs": "^5.4.0",
-    "zone.js": "^0.7.8",
-    "@types/node": "~6.0.60"
+    "zone.js": "^0.7.8"
   }
 }
